# Dataset-Normalization-and-API-creation-Project

./: .gitignore  LICENSE  README.md  env_example.txt  pyproject.toml
api/: crud.py  database.py  demo_recommender.py  main.py  models.py  schemas.py
data_preparation/: data_transformations.py  data_utils.py  data_view.py  database_models.py  etl_pipeline.py
data_preparation/examples/: netflix_dataset_normalization.ipynb
utils/: data_from_kaggle.py
